---------------------------------------------------------------------------------------------------
Version: 17.0.2
Date: 2019-07-XX
  Features:
  Changes:
    - Red text is lighter to improve readability on stream
    - Order Audit records the number of parts launched out of the required number.
    - Rocket Silo's behaviour is set via the mod and no longer requires specific Rocket Silo Construction mod settings.
  Bugfixes:
    - Fix market price discrepencies
    - Fix Investments Total recalculation from mod setting changes or version updates
    - Order Gui Bonus text corrected for the final minute of each bonus time period.
    - Order Audit had duplicate entries for multi part orders.
    - A cancelled and then restarted order decryption could get multiple drydocks in to the "Decrypting" state. The decryption technology would decrypt all drrdocks in the "Decrypting" state at once.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.1
Date: 2019-07-19
  Features:
    - Add Investment Delete command. It updates all totals when ran.
    - Add Investment GUI condensing option to reduce the clutter of many small investments in the Investment GUI screen.
  Changes:
    - Coins and coin chests are now selectable in filters.
  Bugfixes:
    - Fix issue with Investments being wiped on mod upgrade.
    - Fix issue with Investment Dividend Multiplyer setting being changed not recalculating Overdraft limit
    - When placing player entites in the map raise the built event for other mods.
  Info:
    - Requires Rocket Silo Construciton mod 0.17.9 as this has a fix for mod placed rocket silo construction sites.
---------------------------------------------------------------------------------------------------
Version: 17.0.0
Date: 2019-07-10
  Features:
    - Initial Release
  Changes:
  Bugfixes:
  Info: