@@ -79,4 +79,5 @@ Events.RegisterEvent(defines.events.on_entity_died)
 Events.RegisterEvent(defines.events.script_raised_destroy)
 Events.RegisterEvent(defines.events.on_lua_shortcut)
 Events.RegisterEvent(defines.events.on_gui_click)
+Events.RegisterEvent(defines.events.on_selected_entity_changed)
 EventScheduler.RegisterScheduler()
