@@ -130,6 +130,8 @@ wills_spaceship_repair-delivery_pod_size_invalid_table=ERROR: setting "Item deli
 wills_spaceship_repair-delivery_pod_size_invalid_ship_size=ERROR: setting "Item delivery pod size cash values", missing/invalid shipSize for entry __1__
 wills_spaceship_repair-delivery_pod_size_invalid_coin_cost=ERROR: setting "Item delivery pod size cash values", missing/invalid coinCost for entry __1__
 wills_spaceship_repair-delivery_pod_size_invalid_radius=ERROR: setting "Item delivery pod size cash values" missing/invalid radius for entry __1__
+wills_spaceship_repair-rocket_silo_contents_list=Rocket silo output contains:
+wills_spaceship_repair-rocket_silo_contents_empty=Rocket silo output is empty
 
 
 
@@ -138,6 +140,7 @@ wills_spaceship_repair-write_order_data=: Write out all order data to file
 wills_spaceship_repair-add_investment=: Add a new Investment, required arguments: 'Player Name' InvestmentAmount
 wills_spaceship_repair-delete_investment=: Delete the given Investment Index.
 wills_spaceship_repair-write_investment_data=: Write out the investment data to file
+
 
 
 [mod-setting-name]
@@ -178,3 +181,4 @@ wills_spaceship_repair-orders_gui_button=Toggle Orders Gui
 
 [misc]
 wills_spaceship_repair-double=__1____2__
+wills_spaceship_repair-triple=__1____2____3__
