@@ -2,6 +2,7 @@
 Version: 17.0.2
 Date: 2019-07-XX
   Features:
+    - Added on-hover text over the rocket silo to list the silos output (result) inventory
   Changes:
     - Red text is lighter to improve readability on stream
     - Order Audit records the number of parts launched out of the required number.
